--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,5 +20,6 @@ jobs:
         pip install pylint
     - name: Analysing the code with pylint
       run: |
+        cd kmers
         find . -name "*.py" | grep -v "init" | xargs pylint
 
